<?xml version="1.0" encoding="utf-8"?>
<ru.appkode.clippingdemo.ui.PorterDuffSoftwareDemo
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/page_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppTheme.Body2"
                android:text="@string/demo_porter_duff_software_page1"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="16dp"
                android:text="@string/button_test"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="#4D4D4D"
                android:text="@string/stuff"
                />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</ru.appkode.clippingdemo.ui.PorterDuffSoftwareDemo>
